# Stillpoint

./: .gitignore  CHANGELOG.md  README.md  Testgame1.py  Testgame2.py  Testgame3.py  Testgame4.py  Testgame5.py  autosave.txt  export_presets.cfg  leaderboard.txt  project.godot  pyproject.toml
.github/workflows/: ci.yml
assets/characters/: player_down.png.import  player_down_left.png.import  player_down_right.png.import  player_left.png.import  player_right.png.import  player_up.png.import  player_up_left.png.import  player_up_right.png.import
assets/enemies/: avoid.png.import  chase.png.import  circle.png.import
assets/environments/: background.png.import
docs/: ARCHITECTURE.md  COMBAT_ANIMATION_GUIDE.md  ENTITY_ID_GUIDE.md  MIGRATION.md  QUEST_CONDITION_EFFECT_GUIDE.md  REGION_AUTHORING_GUIDE.md  SAVE_V4_GUIDE.md  WORLD_ARCHITECTURE.md
legacy/: game_solution.py
legacy/python-tkinter/: CONTRIBUTING.md  README.md  run.py
resources/attacks/: attack_light_1.tres  attack_light_2.tres  attack_light_3.tres  basic_melee.tres
resources/characters/: player.tres
resources/dialogues/: mira_deliver.tres  mira_done.tres  mira_intro.tres  mira_waiting.tres  ren_intro.tres
resources/enemies/: avoid.tres  chase.tres  circle.tres
resources/factions/: adventurers.tres  bandits.tres  townfolk.tres
resources/items/: double.tres  large.tres  pierce.tres  points.tres  shield.tres  speed.tres
resources/levels/: prototype_level.tres
resources/npcs/: mira.tres  (+2 more)
tests/: test_combat.py  test_engine.py  test_models.py  test_runner.gd  test_runner.gd.uid  test_storage.py
(+611 files in other folders)
