[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillpoint-game"
version = "0.2.0"
description = "A score-driven top-down survival shooter built with Python and Tkinter."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yangjunjie Lin" }]
dependencies = ["Pillow>=10.0,<13"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Arcade",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
stillpoint = "stillpoint.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stillpoint = ["assets/*.png"]

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
